<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo1"
            android:padding="100px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:orientation="vertical"
        android:padding="20px">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goPla"
            android:text="@string/plat"
            android:textSize="20dp"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:orientation="vertical"
        android:padding="20px">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goBeb"
            android:text="@string/beb"
            android:textSize="20dp"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"/>

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5px"
    android:orientation="vertical"
    android:padding="20px">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goPost"
        android:text="@string/post"
        android:textSize="20dp"
        android:theme="@style/botonStyle"
        android:layout_centerInParent="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:orientation="vertical"
        android:padding="20px">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goTer"
            android:text="@string/term"
            android:textSize="20dp"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"/>

    </LinearLayout>

</LinearLayout>
