<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/fondo1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo1"
            android:padding="100px"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5px"
            android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:background="@drawable/arrozpollo"
            android:text="@string/arroz"
            android:onClick="abrirDial"
            android:textSize="20dp"
            android:textStyle="bold"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"
            android:padding="30dp"
            android:layout_margin="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:background="@drawable/spaguetti"
            android:text="@string/spa"
            android:onClick="abrirDial2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"
            android:padding="30dp"
            android:layout_margin="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:background="@drawable/camaron"
            android:text="@string/cam"
            android:onClick="abrirDial2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"
            android:padding="30dp"
            android:layout_margin="10dp"
            />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToMenu"
                android:text="@string/reg"
                android:textSize="20dp"
                android:textStyle="bold"
                android:theme="@style/botonStyle"
                android:layout_centerInParent="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
