<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.as.restaurante.MainActivity"
    android:background="@drawable/fondo1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo1"
            android:padding="100px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10px"
        android:layout_margin="4px"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tir"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16pt"
            android:layout_gravity="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10px"
        android:layout_margin="4px"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lim"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16pt"
            android:layout_gravity="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10px"
        android:layout_margin="4px"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tes"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16pt"
            android:layout_gravity="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10px"
        android:layout_margin="4px"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16pt"
            android:layout_gravity="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:orientation="vertical"
        android:padding="20px">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goAgreg1"
            android:text="@string/btn1"
            android:textSize="20dp"
            android:theme="@style/botonStyle"
            android:layout_centerInParent="true"/>

    </LinearLayout>


</LinearLayout>
